--- a/index.html
+++ b/index.html
@@ -156,10 +156,7 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              Manalil is an orthodox family located in Chennithala Panchayath of Mavelikara. We had business and related
-              services from very old time.
-              Manalil Mini Super Market is located in Mathen Memorial building built by Gevarghese on 1947(January). A 2
-              storey building which will tell the tail of more than 6 decades .
+              Welcome to Manalil Supermarket, a long-standing establishment rooted in the heart of Chennithala Panchayath, Mavelikara. With a rich history dating back several decades, our family-owned business has been serving the community with dedication and excellence.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i>There are no secrets to success. It is the result of preparation,
@@ -172,19 +169,15 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              At initial stage we had a Rice Mill and related business. Later extended the services to match stick
-              production, oil sales,
-              hardware shop and so on. In the year of 1999 GEORGE THOMAS(Reji) Youngest son of G.George establised a
-              Supermarket in Mathen Memmorial Buildings.
-              In the beginning it was a small shop which started with a capital of 50k Rs.
-              </br>As years passed, the business establised in the form of a mini supermarket by the hardwork of George
-              Thomas and his spouse Ivy Thomas.
-              At present the shop is working in full swing, by competing with competitors and other challenges in the
-              market.</br>
-              We consider our customers as our most important stakeholders. Our aim is to nourish, satisfy and delight
-              our customers. At Manalil supermarket you will find quality products being sold at affordable prices
-              with a guaranteed customer satisfaction.
-            </p>
+              Our journey began with a humble rice mill and related business, which gradually expanded to encompass matchstick production, oil sales, and a hardware shop. In 1999, George Thomas (Reji), the youngest son of G. George, had a vision and established a small shop in the iconic Mathen Memorial Buildings. With an initial capital of Rs. 50,000, this marked the inception of our supermarket.
+              </br>Over the years, through the relentless hard work and commitment of George Thomas and his spouse, Ivy Thomas, our establishment has evolved into a thriving mini supermarket. Today, we proudly operate a bustling store that competes with industry peers and tackles the challenges of a dynamic market.</br>
+              At Manalil Supermarket, we hold our customers in the highest regard. We believe that our success lies in nourishing, satisfying, and delighting our valued patrons. With this principle at the core of our operations, we are committed to offering an extensive range of quality products at affordable prices, ensuring an unmatched level of customer satisfaction.
+        </br>Our team strives to create a shopping experience that goes beyond mere transactions. We are dedicated to providing a welcoming environment where customers can discover a wide array of products that meet their diverse needs. From fresh produce to household essentials, from pantry staples to specialty items, we curate our selection meticulously to cater to all preferences.
+      </br>We take pride in our strong relationships with local suppliers, enabling us to source the finest and freshest products. Our commitment to quality extends to every aspect of our operations, including customer service, product availability, and store cleanliness. When you step into Manalil Supermarket, you can trust that you are accessing the best products and services available.
+    </br>We take pride in our strong relationships with local suppliers, enabling us to source the finest and freshest products. Our commitment to quality extends to every aspect of our operations, including customer service, product availability, and store cleanliness. When you step into Manalil Supermarket, you can trust that you are accessing the best products and services available.
+</br>We take pride in our strong relationships with local suppliers, enabling us to source the finest and freshest products. Our commitment to quality extends to every aspect of our operations, including customer service, product availability, and store cleanliness. When you step into Manalil Supermarket, you can trust that you are accessing the best products and services available.
+            
+        </p>
             <a href="#clients" class="btn-learn-more scrollto">Learn More</a>
           </div>
         </div>
