--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@
           <div class="col-lg-6">
             <p>
               Welcome to Manalil Supermarket, a long-standing establishment rooted in the heart of Chennithala Panchayath, Mavelikara. With a rich history dating back several decades, our family-owned business has been serving the community with dedication and excellence.
+            </br>Our journey began with a humble rice mill and related business, which gradually expanded to encompass matchstick production, oil sales, and a hardware shop. In 1999, George Thomas (Reji), the youngest son of G. George, had a vision and established a small shop in the iconic Mathen Memorial Buildings. With an initial capital of Rs. 50,000, this marked the inception of our supermarket.
+          </br>Over the years, through the relentless hard work and commitment of George Thomas and his spouse, Ivy Thomas, our establishment has evolved into a thriving mini supermarket. Today, we proudly operate a bustling store that competes with industry peers and tackles the challenges of a dynamic market.</br>
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i>There are no secrets to success. It is the result of preparation,
@@ -169,8 +171,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Our journey began with a humble rice mill and related business, which gradually expanded to encompass matchstick production, oil sales, and a hardware shop. In 1999, George Thomas (Reji), the youngest son of G. George, had a vision and established a small shop in the iconic Mathen Memorial Buildings. With an initial capital of Rs. 50,000, this marked the inception of our supermarket.
-              </br>Over the years, through the relentless hard work and commitment of George Thomas and his spouse, Ivy Thomas, our establishment has evolved into a thriving mini supermarket. Today, we proudly operate a bustling store that competes with industry peers and tackles the challenges of a dynamic market.</br>
+              
               At Manalil Supermarket, we hold our customers in the highest regard. We believe that our success lies in nourishing, satisfying, and delighting our valued patrons. With this principle at the core of our operations, we are committed to offering an extensive range of quality products at affordable prices, ensuring an unmatched level of customer satisfaction.
         </br>Our team strives to create a shopping experience that goes beyond mere transactions. We are dedicated to providing a welcoming environment where customers can discover a wide array of products that meet their diverse needs. From fresh produce to household essentials, from pantry staples to specialty items, we curate our selection meticulously to cater to all preferences.
       </br>We take pride in our strong relationships with local suppliers, enabling us to source the finest and freshest products. Our commitment to quality extends to every aspect of our operations, including customer service, product availability, and store cleanliness. When you step into Manalil Supermarket, you can trust that you are accessing the best products and services available.
