--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              </br>Our team strives to create a shopping experience that goes beyond mere transactions. We are dedicated
+              Our team strives to create a shopping experience that goes beyond mere transactions. We are dedicated
               to providing a welcoming environment where customers can discover a wide array of products that meet their
               diverse needs. From fresh produce to household essentials, from pantry staples to specialty items, we
               curate our selection meticulously to cater to all preferences.
