--- a/index.html
+++ b/index.html
@@ -952,14 +952,14 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>manalilsupermarket@gmail.com</p>
+                <p><a href="mailto:manalilsupermarket@gmail.com">manalilsupermarket@gmail.com</a></p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+91479 2324658</p>
-                <p>+91 94467 10364</p>
+                <p><a href="tel:+91479 2324658">+91479 2324658</a></p>
+                <p><a href="tel:+91 94467 10364">+91 94467 10364</a></p>
               </div>
 
             </div>
