--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
           <h3>Call to Contact</h3>
           <p> Feel free to call us whenever you wish we are here to help, clarify doubts regarding our products and
             services.</p>
-          <p>+91479 2324658 +91 94467 10364</p>
+          <p><a href="tel:+91479 2324658">+91479 2324658</a> &nbsp;&nbsp;<a href="tel: +91 94467 10364">+91 94467 10364</a></p>
           <a class="cta-btn" href="#contact">Location</a>
         </div>
       </div>
