--- a/index.html
+++ b/index.html
@@ -166,7 +166,6 @@
             <p>Over the years, through the relentless hard work and commitment of George Thomas and his spouse, Ivy
               Thomas, our establishment has evolved into a thriving mini supermarket. Today, we proudly operate a
               bustling store that competes with industry peers and tackles the challenges of a dynamic market.</p>
-
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i>There are no secrets to success. It is the result of preparation,
@@ -189,18 +188,22 @@
               diverse needs. From fresh produce to household essentials, from pantry staples to specialty items, we
               curate our selection meticulously to cater to all preferences.
             </p>
-            <p>We take pride in our strong relationships with local suppliers, enabling us to source the finest and
+            <p>
+              We take pride in our strong relationships with local suppliers, enabling us to source the finest and
               freshest products. Our commitment to quality extends to every aspect of our operations, including customer
               service, product availability, and store cleanliness. When you step into Manalil Supermarket, you can
-              trust that you are accessing the best products and services available.</p>
-            <p>As a cornerstone of the Chennithala Panchayath community, we are honored to be an integral part of our
+              trust that you are accessing the best products and services available.
+            </p>
+            <p>
+              As a cornerstone of the Chennithala Panchayath community, we are honored to be an integral part of our
               customers' lives. We value the trust and loyalty placed in us and continually strive to exceed
               expectations. Your satisfaction is our driving force, and we look forward to welcoming you to Manalil
-              Supermarket, where quality and affordability converge to create an exceptional shopping experience.</p>
-            <p>Please let us know if there's anything specific you're looking for or if you have any further inquiries.
+              Supermarket, where quality and affordability converge to create an exceptional shopping experience.
+            </p>
+            <p>
+              Please let us know if there's anything specific you're looking for or if you have any further inquiries.
               We are here to assist you in any way we can.
             </p>
-
             </p>
             <a href="#clients" class="btn-learn-more scrollto">Learn More</a>
           </div>
